manifest/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  ports:
    - targetPort: 8080
      port: 80
      name: http
  type: ClusterIP
  selector:
    app: echoserver
